@@ -1,5 +1,11 @@
 2006-08-22  Mike Kelly  <pioto@pioto.org>
 
+	* Makefile.am, bash/Makefile.am, bash/auth/Makefile.am,
+	bash/common/Makefile.am, eselect/Makefile.am: Update our makefiles to
+	use sed instead of those nasty old build scripts.
+
+2006-08-22  Mike Kelly  <pioto@pioto.org>
+
 	* tools/subst.bash, tools/get_autoconf_macros.sed: These scripts suck,
 	so they're going the way of the dodo.
 
